--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.20.1",
     "core-js": "^3.6.5",
+    "vee-validate": "^4.0.2",
     "vue": "^2.6.11",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
