--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.20.1",
     "core-js": "^3.6.5",
+    "node-sass": "^5.0.0",
     "vee-validate": "^4.0.2",
     "vue": "^2.6.11",
     "vuelidate": "^0.7.6",
